--- a/ai-app/src/app/globals.css
+++ b/ai-app/src/app/globals.css
@@ -2,3 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Targets All */
+* {
+  box-sizing: border-box;
+  margin: 0px;
+  padding: 0px;
+}
